--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" as="font" href="src/assets/style/fonts/segoesc.ttf" type="font/ttf" crossorigin="anonymous">
     <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chouquette Bet</title>
+    <title>Beer Bet</title>
   </head>
   <body>
     <div id="app"></div>
