feat: match view

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" as="font" href="src/assets/style/fonts/segoesc.ttf" type="font/ttf" crossorigin="anonymous">
-    <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
+    <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600;700&family=Montserrat:ital,wght@0,200;0,400;0,500;0,700;1,200;1,400;1,500;1,600;1,700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beer Bet</title>
+    <meta name="title" content="Beer Bet">
+    <meta name="description" content="BeerBet, a social betting app.">
+  
   </head>
   <body>
     <div id="app"></div>
