--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -10,7 +10,20 @@
     <title>Beer Bet</title>
     <meta name="title" content="Beer Bet">
     <meta name="description" content="BeerBet, a social betting app.">
-  
+   
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Beer Bet">
+    <meta property="og:title" content="Beer Bet">
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Beer Bet">
+
+    <meta name="theme-color" content="#1f2d40">
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/icons/mask-icon.svg" color="#FFFFFF">
+
   </head>
   <body>
     <div id="app"></div>
