fix: social description

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -9,21 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beer Bet</title>
     <meta name="title" content="Beer Bet">
-    <meta name="description" content="Le premier site de paris en ligne, avec des bières. Pariez, dès maintenant entre amis...">
+    <meta name="description" content="The first online betting site, with beers. Bet now with friends...">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://beer.chouquettebet.fr/">
     <meta property="og:site_name" content="Beer Bet">
     <meta property="og:title" content="Beer Bet">
-    <meta property="og:description" content="Le premier site de paris en ligne, avec des bières. Pariez, dès maintenant entre amis...">
+    <meta property="og:description" content="The first online betting site, with beers. Bet now with friends...">
     <meta property="og:image" content="https://beer.chouquettebet.fr/social.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://beer.chouquettebet.fr/">
     <meta property="twitter:title" content="Beer Bet">
-    <meta property="twitter:description" content="Le premier site de paris en ligne, avec des bières. Pariez, dès maintenant entre amis...">
+    <meta property="twitter:description" content="The first online betting site, with beers. Bet now with friends...">
     <meta property="twitter:image" content="https://beer.chouquettebet.fr/social.jpg">
 
     <meta name="theme-color" content="#1f2d40">
