fix: urls new domain

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://beer.chouquettebet.fr/">
+    <meta property="og:url" content="https://beerbet.netlify.app/">
     <meta property="og:site_name" content="Beer Bet">
     <meta property="og:title" content="Beer Bet">
     <meta property="og:description" content="The first online betting site, with beers. Bet now with friends...">
-    <meta property="og:image" content="https://beer.chouquettebet.fr/social.jpg">
+    <meta property="og:image" content="https://beerbet.netlify.app/social.jpg">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://beer.chouquettebet.fr/">
+    <meta property="twitter:url" content="https://beerbet.netlify.app/">
     <meta property="twitter:title" content="Beer Bet">
     <meta property="twitter:description" content="The first online betting site, with beers. Bet now with friends...">
-    <meta property="twitter:image" content="https://beer.chouquettebet.fr/social.jpg">
+    <meta property="twitter:image" content="https://beerbet.netlify.app/social.jpg">
 
     <meta name="theme-color" content="#1f2d40">
     <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" sizes="180x180">
     <link rel="mask-icon" href="/icons/mask-icon.svg" color="#FFFFFF">
     <meta name="google-site-verification" content="ED2CPKFcRCNNmWgTgBMcedJ8OpTIg0aUNXBKQeBQIbc" />
-    <link rel="canonical" href="https://beer.chouquettebet.fr/">
+    <link rel="canonical" href="https://beerbet.netlify.app/">
   </head>
   <body>
     <div id="app"></div>
